# capital-asset-pricing-model

./: .gitattributes  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/: context.md  decisions.md  handoff.md  todo.md
output/: RESULTS.md
output/tables/: bab_metrics.csv  decile_beme_modern_2004_now.csv  decile_beme_paper_1963_2003.csv  decile_me_modern_2004_now.csv  decile_me_paper_1963_2003.csv  decile_momentum_paper_1963_2003.csv  factor_premia_full.csv  factor_premia_modern_2004_now.csv  factor_premia_paper_1927_2003.csv  grs_panel_modern_2004_now.csv  grs_panel_paper_1963_2003.csv  international_premia.csv  momentum.csv  publication_effect.csv  sml_summary.csv  spreads.csv
scripts/: build_figures.py  run_study.py
src/capm/: __init__.py
src/capm/data/: __init__.py  french.py
src/capm/empirics/: __init__.py  _common.py  bab.py  factors.py  grs_panel.py  international.py  momentum.py  publication_effect.py  sml.py  sorts.py
src/capm/reporting/: __init__.py  charts.py  style.py
src/capm/stats/: __init__.py  fama_macbeth.py  grs.py  metrics.py  regression.py
tests/: test_data_parsing.py  test_grs.py  test_metrics.py  test_regression.py  test_studies_integration.py
